--- a/.github/workflows/devops-pipeline.yaml
+++ b/.github/workflows/devops-pipeline.yaml
@@ -26,3 +26,30 @@ jobs:
       - name: Lancer Trivy via Docker
         run: |
           docker run --tty --volume "$(pwd):/scan" aquasec/trivy fs /scan
+
+  sonarcloud:
+    name: Analyse SonarCloud
+    if: github.repository_owner == 'violetthe25th'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: zulu
+
+      - name: Analyze with SonarCloud
+        run: ./mvnw verify jacoco:report sonar:sonar -B \
+          -Dsonar.projectKey=violetthe25th_jpetstore-6 \
+          -Dsonar.organization=VioletOrga \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=$SONAR_TOKEN \
+          -Dlicense.skip=true --no-transfer-progress
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
