--- a/.github/workflows/devops-pipeline.yaml
+++ b/.github/workflows/devops-pipeline.yaml
@@ -43,7 +43,10 @@ jobs:
           distribution: zulu
 
       - name: Analyze with SonarCloud
-        run: ./mvnw verify jacoco:report sonar:sonar -B -Dsonar.projectKey=VioletThe25th_jpetstore-6 -Dsonar.organization=VioletOrga -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN -Dlicense.skip=true --no-transfer-progress || true
+        run: |
+          ./mvnw verify -Dlicense.skip=true --no-transfer-progress || true
+          ./mvnw jacoco:report
+          ./mvnw sonar:sonar -B -Dsonar.projectKey=VioletThe25th_jpetstore-6 -Dsonar.organization=VioletOrga -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
