--- a/.github/workflows/devops-pipeline.yaml
+++ b/.github/workflows/devops-pipeline.yaml
@@ -46,7 +46,7 @@ jobs:
         run: |
           ./mvnw verify -Dlicense.skip=true --no-transfer-progress || true
           ./mvnw jacoco:report
-          ./mvnw sonar:sonar -B -Dsonar.projectKey=VioletThe25th_jpetstore-6 -Dsonar.organization=VioletOrga -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+          ./mvnw sonar:sonar -B -Dsonar.projectKey=VioletThe25th_jpetstore-6 -Dsonar.organization=violetthe25th -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
